feat(api): add release monitors
